the second commit

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link link-text" href="#">О нас</a>
+                        <a class="nav-link link-text" href="#about">О нас</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-text" href="#">FilmToolz</a>
+                        <a class="nav-link link-text" href="#filmtoolz">FilmToolz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-text" href="#">DocToolz</a>
+                        <a class="nav-link link-text" href="#doctoolz">DocToolz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-text" href="#">Услуги</a>
+                        <a class="nav-link link-text" href="#uslugi">Услуги</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-text" href="#">Контакты</a>
+                        <a class="nav-link link-text" href="#contact">Контакты</a>
                     </li>
 
                 </ul>
@@ -45,10 +45,14 @@
         </div>
     </nav>
 
+
+
+    
+
     <section class="hero">
-        <div class="hero__container d-md-flex justify-content-center p-5">
+        <div class="hero__container d-md-flex text-center justify-content-center p-3">
             <div class="hero__text text-md-align-center">
-                <h1 class="text-white text-md-start text-sm-center">
+                <h1 class="text-white text-md-start ">
                     IT решения <br>
                     для кино-бизнеса <br>
                     и не только
@@ -69,7 +73,11 @@
         </div>
     </section>
 
-    <section class="disc">
+
+
+
+
+    <section class="disc" id="about">
         <div class="disc_container  py-5">
             <div class="disc__text text-center">
                 <h2><span class="text-red">Filmtoolz.ru</span> - сервис<br>
@@ -103,7 +111,7 @@
     </section>
 
 
-    <section class="gallery">
+    <section class="gallery" id="filmtoolz">
         <div class="gallery__container d-flex flex-column align-items-center justify-content-center">
 
             <div class="gallery_block d-lg-flex p-5 align-items-center">
@@ -201,9 +209,9 @@
 
     </section>
 
-    <section class="cloud">
+    <section class="cloud" id="doctoolz">
         <div class="cloud__container d-flex flex-column align-items-center text-center justify-content-center">
-            <h2 class="my-md-5 text-white">Doctoolz.ru - облачное<br> решение по организации<br> документооборота </h2>
+            <h2 class="my-md-5 text-white mb-5">Doctoolz.ru - облачное<br> решение по организации<br> документооборота </h2>
 
             <div class="cloud_block bg-white d-lg-flex  p-5 align-items-center  ">
                 <img class="img-fluid mt-md-5 mx-md-5" src="img/cloud.png" alt="photo">
@@ -252,7 +260,7 @@
 
     </section>
 
-    <section class="dev">
+    <section class="dev" id="uslugi">
         <div class="dev__container container ">
             <div class="row d-flex justify-content-center gap-2">
                 <div class="col-lg-5 dev__block d-flex flex-column align-items-center justify-content-center text-center"  >
@@ -326,15 +334,15 @@
     </section>
 
 
-    <section class="footer">
+    <section class="footer " id="contact">
         <div class="footer__container d-flex flex-column justify-content-center align-items-center">
             <div class="footer__contacts d-md-flex my-5">
-                <div class="footer__quest text-white p-sm-5 p-xs-3 ">
+                <div class="footer__quest text-white p-sm-1 p-lg-5 ">
                     <h3 class="">Остались вопросы?</h3>
                     <p>Свяжитесь с нами:</p>
                     <h3>order@trendsoft.ru</h3>
                 </div>
-                <div class="footer__contact p-sm-5 p-xs-3  ">
+                <div class="footer__contact p-sm-1 p-lg-5 ">
                     <h3>Контакты</h3>
                     <h4>+7 (499) 342-57-22</h4>
                     <h4>Москва, ул. Правды 24, стр. 2</h4>
