--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
         <div class="gallery__container d-flex flex-column align-items-center justify-content-center">
 
             <div class="gallery_block d-lg-flex p-5 align-items-center">
-                <img class="img-fluid mt-md-5 mx-md-5" src="img/4_кпп_01 1.png" alt="photo">
+                <img class="img-fluid " src="img/4_кпп_01 1.png" alt="photo">
                 <div class="gallery__text text-center text-lg-start text-sm-center  d-flex flex-column align-items-xs-center align-items-sm-center align-items-md-center  align-items-lg-start ">
                     <h4>Модуль планирования</h4>
-                    <p class="my-5">FilmToolz позволяет систематизировать<br> планирование съемок, автоматически<br>
+                    <p class="my-2">FilmToolz позволяет систематизировать<br> планирование съемок, автоматически<br>
                         формировать и настраивать всю
                         необходимую в<br> процессе съемок документацию, предоставляет<br> широкий спектр
                         производственных отчетов и<br> дает
@@ -136,7 +136,7 @@
                 <div
                     class="gallery__text  text-center  text-lg-start text-sm-center d-flex flex-column align-items-sm-center align-items-lg-start">
                     <h4>Модуль бюджетирования</h4>
-                    <p class="my-5">Модуль бюджетирования предназначен<br> для работы над бюджетом проекта<br> и
+                    <p class="my-2">Модуль бюджетирования предназначен<br> для работы над бюджетом проекта<br> и
                         последующего учета фактических затрат<br>
                         кинопроизводства.<br> FilmToolz позволяет быстро сформировать смету<br> по типовому шаблону или
                         создать собственный.</p>
@@ -152,7 +152,7 @@
                 <div
                     class="gallery__text  text-center  text-lg-start text-sm-center d-flex flex-column align-items-sm-center align-items-lg-start">
                     <h4>Модуль препродакшн</h4>
-                    <p class="my-5">Крупнейшая в России кастинг-база (20 000+ актеров)<br> и модуль препродакшн
+                    <p class="my-2">Крупнейшая в России кастинг-база (20 000+ актеров)<br> и модуль препродакшн
                         позволяют автоматизировать<br> процессы
                         подбора актеров на роли,<br> хранения и систематизации видеопроб проекта,<br> а также
                         осуществлять подбор локаций<br> и вести
@@ -218,7 +218,7 @@
                 <div
                     class="cloud__text  text-center  text-lg-start text-sm-center d-flex flex-column align-items-sm-center align-items-lg-start">
                     <h4>Модуль препродакшн</h4>
-                    <p class="my-5">Крупнейшая в России кастинг-база (20 000+ актеров)<br> и модуль препродакшн
+                    <p class="my-2">Крупнейшая в России кастинг-база (20 000+ актеров)<br> и модуль препродакшн
                         позволяют автоматизировать<br> процессы
                         подбора актеров на роли,<br> хранения и систематизации видеопроб проекта,<br> а также
                         осуществлять подбор локаций<br> и вести
